@startuml
' 定义接口 Strategy
interface Strategy {
    + algorithmInterface() const
}

' 定义具体策略类 ConcreteStrategyA
class ConcreteStrategyA {
    + algorithmInterface() const override
}

' 定义具体策略类 ConcreteStrategyB
class ConcreteStrategyB {
    + algorithmInterface() const override
}

' 定义上下文类 Context
class Context {
    - strategy: unique_ptr<Strategy>
    + setStrategy(strategy: unique_ptr<Strategy>)
    + executeStrategy() const
}

' 关系：具体策略实现 Strategy 接口
Strategy <|.. ConcreteStrategyA
Strategy <|.. ConcreteStrategyB

' 关系：Context 使用 Strategy
Context --> Strategy : uses
@enduml
